CSS fixes for details icon, high contrast, toggle dropdown (#6817)

--- a/theme/common.less
+++ b/theme/common.less
@@ -271,6 +271,10 @@ div.simframe > iframe {
     width: 140px;
     z-index: 2;
 }
+.menubar .ui.menu.fixed #editordropdown .item {
+    border-radius: 0 !important;
+}
+
 .menubar .ui.menu.fixed .ui.item.editor-menuitem .item.link:hover {
     background: none;
 }
