--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -536,6 +536,10 @@
         border-top: 1px solid @HCtextColor !important;
     }
 
+    #editordropdown .menu > .item:not(.active) {
+        background: transparent !important;
+    }
+
     /* Tab list in Modals*/
     .ui.secondary.menu > .item,
     .ui.secondary.pointing.menu > .item,
