--- a/theme/home.less
+++ b/theme/home.less
@@ -257,6 +257,7 @@
                     color: @homeCardHeaderColor;
                 }
                 .button.attached .icon:not(.xicon) {
+                    margin: 0 auto!important;
                     font-size: 5rem;
                     line-height: 8rem;
                 }
